--- a/templates/survey.html
+++ b/templates/survey.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-	<head><meta charset="utf-8"><title>HRI Questionnaire: comfortability self-report</title></head>
+	<head><meta charset="utf-8"><title>Participant Intake Form</title></head>
 	<body>
-		<h1>Participant intake form</h1>
+		<h1>HRI Questionnaire: Comfortability Self-Report</h1>
 		{% if error %}<p style="color:red">{{ error }}</p>{% endif %}
 		<form method="post">
 			<label>Name <input name="name" required></label><br><br>
