--- a/templates/base.html
+++ b/templates/base.html
@@ -125,7 +125,7 @@
 			/* Table style */
 			table { border-collapse: collapse; width: 100%; margin-top: 1rem; }
 			th, td { border: 1px solid #e5e7eb; padding: .6rem; text-align: left; }
-			tr:nth-child(even) { background: #f9fafb; }
+			tr:nth-child(even) { background: #5046e60a; }
 		</style>
 
 		{% block head %}{% endblock %}
